modules/aws_security_groups/main.tf
resource "aws_security_group" "pub_sg" {
  name        = "public_subnets_sg"
  description = "Security group for web server with SSH and HTTP access"
  vpc_id      = var.vpc_id
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 5666
    to_port     = 5666
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "${var.department}-pubsg"
  }
}
resource "aws_security_group" "private_sg" {
  name        = "private_subnets_sg"
  description = "Security group for app servers with SSH access"
  vpc_id      = var.vpc_id
  ingress {
    from_port       = 22
    to_port         = 22
    protocol        = "tcp"
    security_groups = [aws_security_group.pub_sg.id]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  depends_on = [aws_security_group.pub_sg]
  tags = {
    Name = "${var.department}-pvtsg"
  }
}

resource "aws_security_group" "alb_sg_ingress" {
  name        = "${var.department}-alb-sg"
  description = "Security group for application load balancer with HTTP access"
  vpc_id      = var.vpc_id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "${var.department}-alb-sg"
  }
}
/* resource "aws_security_group" "alb_sg_egress" {
  name        = "${var.department}-alb-sg"
  description = "Security group for application load balancer with HTTP access"
  vpc_id      = var.vpc_id
  ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "${var.department}-pvtsg"
  }
} */
